fixed bug temperature spacing

--- a/src/Weather.css
+++ b/src/Weather.css
@@ -36,6 +36,7 @@
   font-size: 64px;
   line-height: 64px;
   font-weight: 400;
+  margin-left: 10px;
 }
 
 .Weather canvas {
